<resources>
    <string name="app_name">HfBridge</string>
    <string name="online_config">OnlineConfig</string>
    <string name="make_crash">Make me crash!!</string>
    <string name="kv_event">K-V Event</string>
    <string name="normal_event">Event</string>
    <string name="event_duration">Value-Type</string>
    <string name="page_stack">Page in Fragment Stack</string>
    <string name="page_tabs">Page in Fragment Tabs</string>
    <string name="social_analytics">Social Analytics</string>
    <string name="js_in_webview">JS Analytics in Webivew</string>
    <string name="flush_cache">send cache message ,right now !</string>
    <string name="signin">signin</string>
    <string name="signoff">signoff</string>
    <string name="orderid">Game pay(contains orderid)</string>
    <string name="event_cc">Categorical Counter Event</string>
    <string name="set_supper">register Super Property</string>

    <string name="get_suppers">Get Super Property</string>
    <string name="clear_suppers">Clear Super Property</string>
    <string name="event_dplus_nomal">nomal track Event</string>
    <string name="event_dplus">custom track Event</string>
    <string name="set_first_launch_event">concern the first launch event</string>
    <string name="game_start">game start</string>
    <string name="game_fail">game fail</string>
    <string name="game_finish">game finish</string>
    <string name="game_pay">game pay</string>
    <string name="game_paynbuy">game paynbuy</string>
    <string name="game_buy">game buy</string>
    <string name="game_use">game use</string>
    <string name="game_bonus">game bonus</string>
    <string name="webview_tv">webview tv</string>
    <string name="ana_name">analytics name</string>
    <string name="game_name">game name</string>
    <string name="dplus_name">dplus name</string>
    <string name="visual_name">test pull data</string>
    <string name="visual_layout">visual layout</string>
</resources>
