<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bgj"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".MainActivity">
    <!--<RadioGroup-->
    <!--android:id="@+id/radioGroup"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->

    <!--<RadioButton-->
    <!--android:id="@+id/btnAna"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="统计场景"-->
    <!--android:checked="true"/>-->

    <!--<RadioButton-->
    <!--android:id="@+id/btnGame"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="游戏场景"/>-->
    <!--<RadioButton-->
    <!--android:id="@+id/btnDplus"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Dplus场景"/>-->
    <!--<RadioButton-->
    <!--android:id="@+id/btnDplusGame"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Dplus_Game场景"/>-->
    <!--</RadioGroup>-->
    <Button
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/ana_name"/>

    <Button
        android:id="@+id/game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/game_name"/>

    <Button
        android:id="@+id/dplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClick"
        android:text="@string/dplus_name"/>



</LinearLayout>